# reputation

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Makefile  PLAN_INSTANCE_A_CONTRACT.md  PLAN_INSTANCE_B_FRONTEND.md  README.md  docker-compose.yml  package.json
.claude/: settings.json
.github/workflows/: ci.yml
api/: go.mod  go.sum  sqlc.yaml
api/migrations/: 00001_init.sql  migrations.go
app/: package-lock.json  package.json  tsconfig.tsbuildinfo
app/.claude/: ralph-loop.local.md
app/app/: layout.tsx  page.tsx
docs/: product.md  roadmap.md  ux-cycles.md
docs/adr/: 0001-pivot-from-solana.md
docs/api/: README.md  openapi.yaml
docs/ops/: README.md
docs/plans/: ui-polish-cycles.md
migrations/: deploy.ts
programs/reputation-passport/: Cargo.toml
programs/reputation-passport/src/: constants.rs  errors.rs  lib.rs
programs/reputation-passport/src/instructions/: emit_work_record.rs  initialize_passport.rs  mint_badge.rs  mod.rs  register_platform.rs
programs/reputation-passport/src/state/: counter.rs  mod.rs  passport.rs  platform.rs  work_record.rs
scripts/: post-deploy.sh  register-platforms.ts  seed-devnet.ts
shared/: constants.json  demo_wallet.txt  program_id.txt
shared/idl/: reputation_passport.json
tests/: reputation-passport.ts
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
web/components/: code-block.tsx  copy-button.tsx  icons.tsx  passport-card.tsx  site-footer.tsx  site-header.tsx  ui.tsx
web/lib/: api.ts  demo-passport.json  demo.ts  mrz.ts  site.ts  (+2 more)
(+43 files in other folders)
