[package]
name = "reputation-passport"
version = "0.1.0"
description = "Reputation Passport Protocol — on-chain gig worker reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_passport"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = "4.1.2"
